# lxm-frmb-projects

./: .gitattributes  README.md  generate.py  pyproject.toml
installers/main/: install.0001.reg  uninstall.0001.reg
src/main/: abcinfo.frmb  ffmpeg-sequences.frmb  ffmpeg-to-gifs.frmb  ffmpeg-videos.frmb  maketx.frmb  oiiotool.frmb
src/main/abcinfo/: abcinfo-verbose.frmb  abcinfo.frmb
src/main/ffmpeg-sequences/: sequence-to-video-interactive.frmb
src/main/ffmpeg-to-gifs/: ffmpeg-togif.bat  video-to-gif-interactive.frmb  video-to-gif-presets.frmb
src/main/ffmpeg-to-gifs/video-to-gif-presets/: togif-24fps-sd1-floyd.frmb  togif-24fps-sd1-sierra24a.frmb  togif-24fps-sd2-sierra24a.frmb  togif-50fps-sd1-floyd.frmb  togif-50fps-sd1-sierra24a.frmb  togif-50fps-sd2-sierra24a.frmb
src/main/ffmpeg-videos/: ffmpeg-mp4-optimize.bat  video-to-mp4-interactive.frmb  video-to-mp4-presets.frmb
src/main/ffmpeg-videos/video-to-mp4-presets/: tomp4-fps24-size1920-fast_film_23.frmb  tomp4-fps24-size1920-med_film_18.frmb  tomp4-fps24-size1920-slower_film_12.frmb
src/main/maketx/: convert-tx-sRGB.frmb  convert-tx.frmb
src/main/oiiotool/: 0_display-info-subimages.frmb  0_display-info.frmb  convert-to-ico.frmb  convert-to-jpg.frmb  convert-to-png-16bit.frmb  convert-to-png-8bit.frmb  rescale-1024.frmb  rescale-2048.frmb  rescale-4096.frmb  rescale-512.frmb
src/main/oiiotool/batch/: oiio-exr-combine.bat  oiiotool-ico-convert.bat  oiiotool-jpg-convert.bat  oiiotool-png-convert.bat  oiiotool-rescale.bat
